correção em formação da amostra

--- a/sample_tasks.html
+++ b/sample_tasks.html
@@ -43,8 +43,7 @@
 		            	<a href="#" title="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Samples<span class="caret"></span></a>
 		            	<ul class="dropdown-menu">
 							<li><a href="sample_projects.html" title="">Initial projects selection</a></li>
-							<li><a href="sample_tasks.html" title="">Construction of task pair sample</a></li>
-		                	<li><a href="task_pair_sample.html" title="">Task pair sample</a></li>							
+							<li><a href="sample_tasks.html" title="">Construction of task pair sample</a></li>							
 		            	</ul>
 		        	</li>
 		    	</ul>                           
@@ -81,13 +80,20 @@
 				 <h4>Collecting task data</h4>
 				  <ul>
 				    <li><a href="pdf/projects_relevant_tasks.pdf" title="">Relevant tasks per project</a></li>
-					After filtering out projects with less than two relevant tasks, we remain with 27 projects.
-					<li><a href="pdf/tasks_analysis_463.pdf" title="">Overview of task analysis per project that has at least 2 relevant tasks</a></li>
+					<li><a href="pdf/projects_texti_tasks.pdf" title="">Non-empty TextI tasks per project</a></li>
+					<li><a href="pdf/projects_integrable_tasks.pdf" title="">Integrable tasks per project</a></li>
+					After filtering out projects with less than two integrable tasks, we remain with 19 projects.
 				  </ul> 
 				  <h4>Task pair sample</h4>
 				  <ul>
-					<li><a href="463_tasks.csv" title="" target="_blank">Selected tasks</a></li>
-					<li><a href="task_pairs.csv" title="" target="_blank">Task pairs</a></li>
+				  	<li><a href="pdf/final_sample_overview.pdf" title="">Overview of sample construction</a></li>
+					<li><a href="tasks_990.csv" title="" target="_blank">Selected merge tasks</a></li>
+					<li><a href="changedFiles_990.csv" title="" target="_blank">Set of changed files by tasks</a></li>
+					<li><a href="testi_990.csv" title="" target="_blank">TestI</a></li>
+					<li><a href="texti_990.csv" title="" target="_blank">TextI</a></li>
+					<li><a href="pdf/integrations_per_project.pdf" title="">Overview of integrations per project</a></li>
+					<br>
+					<img src="img/final_sample_overview.png" width="1000" />
 				  </ul> 
 				<br>
 				<p>While constructing our task sample, we do not systematically target representativeness and diversity. Even so, we observe some variety concerning the attributes:
