--- a/results.html
+++ b/results.html
@@ -68,8 +68,8 @@
             <div class="row">
                 <section class="page col-sm-12">
 				  <h3>Task interfaces</h3>
-				  <h4><a href="testi.zip" title="" target="_blank">TestI of X tasks</a></h4>
-				  <h4><a href="texti.zip" title="" target="_blank">TextI of X tasks</a></h4>
+				  <h4><a href="testi.zip" title="" target="_blank">TestI of 990 tasks</a></h4>
+				  <h4><a href="texti.zip" title="" target="_blank">TextI of 990 tasks</a></h4>
                 </section>
 				<section class="page col-sm-12">
 				  <h3>Predictions of merge conflict risk</h3>
