--- a/sample_tasks.html
+++ b/sample_tasks.html
@@ -87,10 +87,8 @@
 				  <h4>Task pair sample</h4>
 				  <ul>
 				  	<li><a href="pdf/final_sample_overview.pdf" title="">Overview of sample construction</a></li>
-					<li><a href="tasks_990.csv" title="" target="_blank">Selected merge tasks</a></li>
-					<li><a href="changedFiles_990.csv" title="" target="_blank">Set of changed files by tasks</a></li>
-					<li><a href="testi_990.csv" title="" target="_blank">TestI</a></li>
-					<li><a href="texti_990.csv" title="" target="_blank">TextI</a></li>
+					<li><a href="tasks_990.csv" title="">Selected merge tasks</a></li>
+					<li><a href="tasks_data_990.csv" title="">Data of selected tasks (changed files set, TestI, and TextI)</a></li>			
 					<li><a href="pdf/integrations_per_project.pdf" title="">Overview of integrations per project</a></li>
 					<br>
 					<img src="img/final_sample_overview.png" width="1000" />
