--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                       	<li><a href="rq2-results.html" title="">RQ2</a></li>
 		      			<li><a href="rq3-results.html" title="">RQ3</a></li>
 		      			<li><a href="rq4-results.html" title="">RQ4</a></li>
+						<li><a href="other-results.html" title="">Other results</a></li>
 		            	</ul>
 		        	</li>
 					<li class="dropdown">
@@ -101,7 +102,8 @@
                       <li><a href="rq1-results.html" target="_blank" title="">RQ1: Are tasks with non disjoint TestI interfaces associated with higher merge conflict risk?</a></li>
                       <li><a href="rq2-results.html" target="_blank" title="">RQ2: How often does TestI predict conflict risk between two tasks?</a></li>
 					  <li><a href="rq3-results.html" target="_blank" title="">RQ3: Is the size of the intersection between two TestI interfaces proportional to the number of files changed in common by the corresponding tasks?</a></li>
-					  <li><a href="rq4-results.html" target="_blank" title="">RQ4: Is TestI a better predictor of conflict risk than TextI?</a></li>					  
+					  <li><a href="rq4-results.html" target="_blank" title="">RQ4: Is TestI a better predictor of conflict risk than TextI?</a></li>
+					  <li><a href="other-results.html" target="_blank" title="">Other results</a></li>					  
                     </ul>
                   </div>
 				</section>
