--- a/other-results.html
+++ b/other-results.html
@@ -56,30 +56,29 @@
                                   <div class="col-sm-12">
                                     <ol class="breadcrumb">
                                       <li><a href="main.html">Home</a></li>
-                                        <li class="active">RQ2</li>
+                                        <li class="active">Other results</li>
                                           </ol>                    
                                           </div>
                                           </div>
                                           </div>
                                           </div>
-                                          <main class="site-main page-main">
-                                            <div class="container">
-                                              <div class="row">
-                                                <section class="page col-sm-12">
- <h3>RQ2: How often does TestI predict conflict risk between two tasks?</h3>
-
-<p class='character'><br></p>
-
-<p class='character'><hr></p>
-
- <h4>A minimal intersection between TestI is the best predictor of conflict risk between tasks</h4>
-<img src="img/prediction_evaluation_testi.png" width="1000" />	
-
-
-
-  </div>
-  </div>
-  </main>
+<main class="site-main page-main">
+	<div class="container">
+	<div class="row">
+	<section class="page col-sm-12">
+		<h3>Other results</h3>
+			<p class='character'><br></p>
+			<p class='character'><hr></p>
+		<h4>TestI cannot predict conflict risk in MVC slices</h4>
+			<img src="img/log_slice.png" width="1000" />
+			<p class='character'><br></p>
+			<p class='character'><hr></p>
+		<h4>TestI similarity is not often associated with higher conflict risk</h4>
+			<img src="img/prediction_evaluation_testi_similarity.png" width="1000" />	
+	</section>
+	</div>
+</div>
+</main>
   <footer>
   <div class="container">
   <div class="row">
