--- a/rq1-results.html
+++ b/rq1-results.html
@@ -35,6 +35,7 @@
         <li><a href="rq2-results.html" title="">RQ2</a></li>
           <li><a href="rq3-results.html" title="">RQ3</a></li>
             <li><a href="rq4-results.html" title="">RQ4</a></li>
+			<li><a href="other-results.html" title="">Other results</a></li>
               </ul>
               </li>
               <li class="dropdown">
@@ -71,8 +72,7 @@
 				<p class='character'><br></p>
 				<p class='character'><hr></p>
 			 <h4>Tasks with non disjoint TestI interfaces more likely change a common file</h4>
-				<p class='character'>Regressão logística</p>
-				<p class='character'><hr></p>
+				<img src='img/log_testi_intersection.png' border=1 width=1000>
 			 <br>
 			</section>
         </div>
