--- a/rq3-results.html
+++ b/rq3-results.html
@@ -35,6 +35,7 @@
         <li><a href="rq2-results.html" title="">RQ2</a></li>
           <li><a href="rq3-results.html" title="">RQ3</a></li>
             <li><a href="rq4-results.html" title="">RQ4</a></li>
+			<li><a href="other-results.html" title="">Other results</a></li>
               </ul>
               </li>
               <li class="dropdown">
@@ -70,8 +71,6 @@
 					<p class='character'><hr></p>
 				 <h4>The larger the intersection between TestI, the higher the risk of merge conflict between tasks</h4>
 					<img src='img/correlation_risk_size.png' border=1 width=800>
-					<p class='character'><hr></p>
-					<br>
 			</section>
 		</div>
 	</div>
