--- a/rq4-results.html
+++ b/rq4-results.html
@@ -35,6 +35,7 @@
         <li><a href="rq2-results.html" title="">RQ2</a></li>
           <li><a href="rq3-results.html" title="">RQ3</a></li>
             <li><a href="rq4-results.html" title="">RQ4</a></li>
+			<li><a href="other-results.html" title="">Other results</a></li>
               </ul>
               </li>
               <li class="dropdown">
@@ -68,18 +69,16 @@
 			<h3>RQ4: Is TestI a better predictor of conflict risk than TextI?</h3>
 				<p class='character'><br></p>
 				<p class='character'><hr></p>
-				<br>
 			<h4>Tasks with non disjoint TextI interfaces more likely change a common file</h4>
-				<p class='character'>Regressão logística</p>
-				
+				<img src='img/log_texti.png' border=1 width=1000>
+				<p class='character'><br></p>
+				<img src='img/log_hybrid_testi.png' border=1 width=1000>
+				<p class='character'><br></p>
 				<p class='character'><hr></p>
-				<br>
 			<h4>TextI is a more precise predictor of conflict risk than TestI</h4>
 				<img src='img/prediction_evaluation_texti.png' border=1 width=1000>
-				<p class='character'><hr></p>
-				<br>
+				<p class='character'><br></p>
 				<img src='img/prediction_evaluation_hybrid_testi.png' border=1 width=1000>
-				<p class='character'><hr></p>
 		</section>
 	</div>
 </div>
