--- a/sample.html
+++ b/sample.html
@@ -37,6 +37,7 @@
                       	<li><a href="rq2-results.html" title="">RQ2</a></li>
 		      			<li><a href="rq3-results.html" title="">RQ3</a></li>
 		      			<li><a href="rq4-results.html" title="">RQ4</a></li>
+						<li><a href="other-results.html" title="">Other results</a></li>
 		            	</ul>
 		        	</li>
 					<li class="dropdown">
